[package]
name = "gigagrep"
version = "0.2.2"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
colored = "2.1.0"
log = "0.4.20"
rayon = "1.9.0"
regex = "1.10.3"
simple_logger = "4.3.3"

[[bin]]
name = "gg"
path = "src/main.rs"
